// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders active 1`] = `
<div
  className="tab_1ccfp04-o_O-tabActive_1c216xt"
  data-testid="Label"
  onClick={[MockFunction]}
>
  Label
</div>
`;

exports[`renders inactive 1`] = `
<div
  className="tab_1ccfp04"
  data-testid="Label"
  onClick={[MockFunction]}
>
  Label
</div>
`;
